@@ -33,3 +33,4 @@ death_scythe.shp
 firewand.shp
 knife.shp
 starburst.shp
+hawk.shp
